Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Dash Community : Landing page for dash community">
+    <meta name="description" content="Dash Community : An open platform that incentivizes collaborative projects and content">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
@@ -19,7 +19,7 @@
           <a id="forkme_banner" href="https://github.com/dashcommunity">View on GitHub</a>
 
           <h1 id="project_title">Dash Community</h1>
-          <h2 id="project_tagline">Landing page for dash community</h2>
+          <h2 id="project_tagline">An open platform that incentivizes collaborative projects and content</h2>
 
         </header>
     </div>
@@ -27,30 +27,59 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h3>
-<a id="welcome-dash-community-member" class="anchor" href="#welcome-dash-community-member" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome Dash Community Member!</h3>
+        <h1>
+<a id="welcome-to-dash-community" class="anchor" href="#welcome-to-dash-community" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to Dash Community</h1>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+<p>Dash Community is an open platform that incentivizes collaborative content and projects.  </p>
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
+<p>Specifically, it is a <a href="https://github.com/blog/674-introducing-organizations">github organization</a> separate from, and complementary to, the main <a href="https://github.com/dashpay"><code>dashpay</code> organization</a>.  The <a href="https://github.com/dashcommunity"><code>dashcommunity</code> organization</a> hosts repositories for various purposes - something for everyone.  </p>
 
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+<p>This platform aims to increase community contribution and continue the general decentralization of Dash.  It achieves this by lowering the barrier to entry and raising the <a href="https://github.com/dashcommunity/proposal-dash-community/blob/master/proposal.md#table-4---compensation-for-community-participation">financial incentive</a> for software developers, writers, marketers, and anyone else to use and contribute to Dash.</p>
 
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<p>This landing page provides useful links to navigate around the project content</p>
 
 <h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+<a id="guides" class="anchor" href="#guides" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="https://github.com/dashcommunity/guides">Guides</a>
+</h3>
 
-<p>You can @mention a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<ul>
+<li><a href="https://github.com/dashcommunity/guides/blob/master/create_proposal_from_template.md">Create a proposal from a Template</a></li>
+<li><a href="https://github.com/dashcommunity/guides/blob/master/create_proposal_template.md">Create a proposal template</a></li>
+<li><a href="https://github.com/dashcommunity/guides/blob/master/set_up_masternode.md">Set up a masternode</a></li>
+<li><a href="https://github.com/dashcommunity/guides/blob/master/set_up_virtual_private_server.md">Set up a virtual private server</a></li>
+<li><a href="https://github.com/dashcommunity/guides/blob/master/submit_proposal_to_network.md">Submit a proposal to the dash network</a></li>
+</ul>
 
 <h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
+<a id="proposal-templates" class="anchor" href="#proposal-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="https://github.com/dashcommunity/proposal-templates">Proposal Templates</a>
+</h3>
 
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+<ul>
+<li><a href="https://github.com/dashcommunity/proposal-templates/blob/master/simple.md">Simple</a></li>
+<li>
+<a href="https://github.com/dashcommunity/proposal-templates/blob/master/detailed.md">Detailed</a> </li>
+</ul>
+
+<h3>
+<a id="proposals" class="anchor" href="#proposals" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Proposals</h3>
+
+<ul>
+<li><a href="https://dashcommunity.github.io/proposal-core-team-remake/">Re-created core proposal</a></li>
+<li><a href="https://dashcommunity.github.io/proposal-dash-community/">Dash Community</a></li>
+</ul>
+
+<h3>
+<a id="blog" class="anchor" href="#blog" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="https://github.com/dashcommunity/blog">Blog</a>
+</h3>
+
+<ul>
+<li><a href="https://github.com/dashcommunity/blog/blob/master/shift_to_decentralization.md">Dash Decentralization</a></li>
+<li><a href="https://github.com/dashcommunity/guides/blob/master/create_blog_post.md">Write Your Own Post</a></li>
+</ul>
+
+<h5>
+<a id="project-management-board" class="anchor" href="#project-management-board" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="https://github.com/dashcommunity/proposal-dash-community/projects/1?fullscreen=true">Project Management Board</a>
+</h5>
       </section>
     </div>
 
