Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -27,20 +27,16 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h1>
-<a id="welcome-to-dash-community" class="anchor" href="#welcome-to-dash-community" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to Dash Community</h1>
-
-<p>Dash Community is an open platform that incentivizes collaborative content and projects.  </p>
-
-<p>Specifically, it is a <a href="https://github.com/blog/674-introducing-organizations">github organization</a> separate from, and complementary to, the main <a href="https://github.com/dashpay"><code>dashpay</code> organization</a>.  The <a href="https://github.com/dashcommunity"><code>dashcommunity</code> organization</a> hosts repositories for various purposes - something for everyone.  </p>
+        <p>Dash Community is a <a href="https://github.com/blog/674-introducing-organizations">github organization</a> separate from, and complementary to, the main <a href="https://github.com/dashpay"><code>dashpay</code> organization</a>.  The <a href="https://github.com/dashcommunity"><code>dashcommunity</code> organization</a> hosts repositories for various purposes - something for everyone.  </p>
 
 <p>This platform aims to increase community contribution and continue the general decentralization of Dash.  It achieves this by lowering the barrier to entry and raising the <a href="https://github.com/dashcommunity/proposal-dash-community/blob/master/proposal.md#table-4---compensation-for-community-participation">financial incentive</a> for software developers, writers, marketers, and anyone else to use and contribute to Dash.</p>
 
-<p>This landing page provides useful links to navigate around the project content</p>
-
 <h3>
+<a id="explore-dash-community" class="anchor" href="#explore-dash-community" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Explore Dash Community</h3>
+
+<h5>
 <a id="guides" class="anchor" href="#guides" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="https://github.com/dashcommunity/guides">Guides</a>
-</h3>
+</h5>
 
 <ul>
 <li><a href="https://github.com/dashcommunity/guides/blob/master/create_proposal_from_template.md">Create a proposal from a Template</a></li>
@@ -50,9 +46,9 @@
 <li><a href="https://github.com/dashcommunity/guides/blob/master/submit_proposal_to_network.md">Submit a proposal to the dash network</a></li>
 </ul>
 
-<h3>
+<h5>
 <a id="proposal-templates" class="anchor" href="#proposal-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="https://github.com/dashcommunity/proposal-templates">Proposal Templates</a>
-</h3>
+</h5>
 
 <ul>
 <li><a href="https://github.com/dashcommunity/proposal-templates/blob/master/simple.md">Simple</a></li>
@@ -60,17 +56,17 @@
 <a href="https://github.com/dashcommunity/proposal-templates/blob/master/detailed.md">Detailed</a> </li>
 </ul>
 
-<h3>
-<a id="proposals" class="anchor" href="#proposals" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Proposals</h3>
+<h5>
+<a id="proposals" class="anchor" href="#proposals" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Proposals</h5>
 
 <ul>
 <li><a href="https://dashcommunity.github.io/proposal-core-team-remake/">Re-created core proposal</a></li>
 <li><a href="https://dashcommunity.github.io/proposal-dash-community/">Dash Community</a></li>
 </ul>
 
-<h3>
+<h5>
 <a id="blog" class="anchor" href="#blog" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="https://github.com/dashcommunity/blog">Blog</a>
-</h3>
+</h5>
 
 <ul>
 <li><a href="https://github.com/dashcommunity/blog/blob/master/shift_to_decentralization.md">Dash Decentralization</a></li>
@@ -80,6 +76,76 @@
 <h5>
 <a id="project-management-board" class="anchor" href="#project-management-board" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="https://github.com/dashcommunity/proposal-dash-community/projects/1?fullscreen=true">Project Management Board</a>
 </h5>
+
+<h3>
+<a id="contribute-to-dash-community" class="anchor" href="#contribute-to-dash-community" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Contribute to Dash Community</h3>
+
+<h5>
+<a id="how" class="anchor" href="#how" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>How</h5>
+
+<ol>
+<li>Fill out this form to receive an invitation to the organization </li>
+<li>Explore the repository and the project management board (roadmap)</li>
+<li>Contribute some dash-related code, <a href="">write a guide</a>, write a blog post(), create a proposal(), or commit something else to the repository that's useful to the community</li>
+<li>Help lobby the masternode operators to fund the project</li>
+</ol>
+
+<h5>
+<a id="why" class="anchor" href="#why" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Why</h5>
+
+<p>Members of this organization who join and contribute content to Dash Community will be compensated according to the table below.  Payments are contingent on approval of the <a href="https://dashcommunity.github.io/proposal-dash-community/">proposal to the Dash masternode operators</a></p>
+
+<h6>
+<a id="compensation-for-community-participation" class="anchor" href="#compensation-for-community-participation" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Compensation for Community Participation</h6>
+
+<table>
+<thead>
+<tr>
+<th>Cost</th>
+<th>Description</th>
+<th align="center">Reward</th>
+<th align="center">Cost</th>
+<th>Comment</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>C5</td>
+<td>First 10 people...</td>
+<td align="center">1.0 DASH</td>
+<td align="center">10 DASH</td>
+<td>...who make 1 or more commits</td>
+</tr>
+<tr>
+<td>C6</td>
+<td>Next 20 people...</td>
+<td align="center">0.5 DASH</td>
+<td align="center">10 DASH</td>
+<td>...who make 1 or more commits</td>
+</tr>
+<tr>
+<td>C7</td>
+<td>Remaining people</td>
+<td align="center"></td>
+<td align="center">10 DASH</td>
+<td>split between remaining who join</td>
+</tr>
+<tr>
+<td>C8</td>
+<td>Discretionary</td>
+<td align="center"></td>
+<td align="center">20 DASH</td>
+<td>for great content (blogs, guides, etc)</td>
+</tr>
+<tr>
+<td><strong>Total</strong></td>
+<td></td>
+<td align="center"></td>
+<td align="center"><strong>50 DASH</strong></td>
+<td></td>
+</tr>
+</tbody>
+</table>
       </section>
     </div>
 
