Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <p>This platform aims to increase community contribution and continue the general decentralization of Dash.  It achieves this by lowering the barrier to entry and raising the <a href="https://github.com/dashcommunity/proposal-dash-community/blob/master/proposal.md#table-4---compensation-for-community-participation">financial incentive</a> for software developers, writers, marketers, and anyone else to use and contribute to Dash.</p>
 
 <h3>
-<a id="explore-dash-community" class="anchor" href="#explore-dash-community" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Explore Dash Community</h3>
+<a id="explore-the-dash-community" class="anchor" href="#explore-the-dash-community" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Explore the Dash Community</h3>
 
 <h5>
 <a id="guides" class="anchor" href="#guides" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="https://github.com/dashcommunity/guides">Guides</a>
