Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <a id="guides" class="anchor" href="#guides" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Guides</h5>
 
 <ul>
-<li><a href="https://github.com/dashcommunity/guides/blob/master/create_proposal_from_template.md">Create a proposal from a Template</a></li>
+<li><a href="https://github.com/dashcommunity/guides/blob/master/create_proposal_from_template.md">Create a proposal from a template</a></li>
 <li><a href="https://github.com/dashcommunity/guides/blob/master/create_proposal_template.md">Create a proposal template</a></li>
 <li><a href="https://github.com/dashcommunity/guides/blob/master/set_up_masternode.md">Set up a masternode</a></li>
 <li><a href="https://github.com/dashcommunity/guides/blob/master/set_up_virtual_private_server.md">Set up a virtual private server</a></li>
@@ -58,7 +58,7 @@
 <ul>
 <li><a href="https://github.com/dashcommunity/blog/blob/master/shift_to_decentralization.md">Dash Decentralization</a></li>
 <li><a href="https://github.com/dashcommunity/guides/blob/master/create_blog_post.md">Write Your Own Post</a></li>
-<li><a href="https://github.com/dashcommunity/blog">Repo</a></li>
+<li><a href="https://github.com/dashcommunity/blog">Repository</a></li>
 </ul>
 
 <h5>
@@ -75,9 +75,10 @@
 <a id="how" class="anchor" href="#how" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>How</h5>
 
 <ol>
-<li>Fill out this form to receive an invitation to the organization </li>
-<li>Explore the repository and the project management board (roadmap)</li>
-<li>Contribute some dash-related code, <a href="">write a guide</a>, write a blog post(), create a proposal(), or commit something else to the repository that's useful to the community</li>
+<li>Fill out the form below to receive an invitation to the organization </li>
+<li>Explore the repository and the <a href="https://github.com/dashcommunity/proposal-dash-community/projects/1?fullscreen=true">project management board</a>
+</li>
+<li>Contribute some dash-related code, <a href="https://github.com/dashcommunity/guides">write a guide</a>, write a blog post(<a href="https://github.com/dashcommunity/guides/blob/master/create_blog_post.md">https://github.com/dashcommunity/guides/blob/master/create_blog_post.md</a>), create a proposal(<a href="https://github.com/dashcommunity/guides/blob/master/create_proposal_from_template.md">https://github.com/dashcommunity/guides/blob/master/create_proposal_from_template.md</a>), or commit something else to the repository that's useful to the community</li>
 <li>Help lobby the masternode operators to fund the project</li>
 </ol>
 
