--- a/index.html
+++ b/index.html
@@ -24,19 +24,19 @@
 <a id="explore-dash-community" class="anchor" href="#explore-dash-community" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Explore Dash Community</h3>
 
 <h5>
-<a id="guides" class="anchor" href="#guides" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Guides</h5>
+<a id="proposals" class="anchor" href="#proposals" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Proposals</h5>
 
 <ul>
-<li><a href="https://github.com/dashcommunity/guides/blob/master/create_proposal_from_template.md">Create a proposal from a template</a></li>
-<li><a href="https://github.com/dashcommunity/guides/blob/master/create_proposal_template.md">Create a proposal template</a></li>
-<li><a href="https://github.com/dashcommunity/guides/blob/master/set_up_masternode.md">Set up a masternode</a></li>
-<li><a href="https://github.com/dashcommunity/guides/blob/master/set_up_virtual_private_server.md">Set up a virtual private server</a></li>
-<li><a href="https://github.com/dashcommunity/guides/blob/master/submit_proposal_to_network.md">Submit a proposal to the dash network</a></li>
-<li><a href="https://github.com/dashcommunity/guides">Repository</a></li>
-</ul>
+<li><a href="https://dashcommunity.github.io/proposals/">Landing page</a></li>
+<li>Proposal Guides
 
-<h5>
-<a id="proposal-templates" class="anchor" href="#proposal-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Proposal Templates</h5>
+<ul>
+<li><a href="https://github.com/dashcommunity/guides/blob/master/create_proposal_from_template.md">Create a proposal</a></li>
+<li><a href="https://github.com/dashcommunity/guides/blob/master/create_proposal_template.md">Create a proposal template</a></li>
+<li><a href="https://github.com/dashcommunity/guides/blob/master/submit_proposal_to_network.md">Submit a proposal to the dash network</a></li>
+</ul>
+</li>
+<li>Proposal Templates
 
 <ul>
 <li><a href="https://github.com/dashcommunity/proposal-templates/blob/master/simple.md">Simple</a></li>
@@ -44,12 +44,16 @@
 <a href="https://github.com/dashcommunity/proposal-templates/blob/master/detailed.md">Detailed</a> </li>
 <li><a href="https://github.com/dashcommunity/proposal-templates">Repository</a></li>
 </ul>
+</li>
+</ul>
 
 <h5>
-<a id="proposals" class="anchor" href="#proposals" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Proposals</h5>
+<a id="additional-guides" class="anchor" href="#additional-guides" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Additional Guides</h5>
 
 <ul>
-<li><a href="https://dashcommunity.github.io/proposals/">Repository</a></li>
+<li><a href="https://github.com/dashcommunity/guides/blob/master/set_up_masternode.md">Set up a masternode</a></li>
+<li><a href="https://github.com/dashcommunity/guides/blob/master/set_up_virtual_private_server.md">Set up a virtual private server</a></li>
+<li><a href="https://github.com/dashcommunity/guides">Repository</a></li>
 </ul>
 
 <h5>
@@ -59,13 +63,6 @@
 <li><a href="https://github.com/dashcommunity/blog/blob/master/shift_to_decentralization.md">Dash Decentralization</a></li>
 <li><a href="https://github.com/dashcommunity/guides/blob/master/create_blog_post.md">Write Your Own Post</a></li>
 <li><a href="https://github.com/dashcommunity/blog">Repository</a></li>
-</ul>
-
-<h5>
-<a id="project-management" class="anchor" href="#project-management" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Project Management</h5>
-
-<ul>
-<li><a href="https://github.com/dashcommunity/proposal-dash-community/projects/1?fullscreen=true">Project Management Board</a></li>
 </ul>
 
 <h3>
