--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 <li>Fill out the form below to receive an invitation to the organization </li>
 <li>Explore the repository and the <a href="https://github.com/dashcommunity/proposal-dash-community/projects/1?fullscreen=true">project management board</a>
 </li>
-<li>Contribute some dash-related code, <a href="https://github.com/dashcommunity/guides">write a guide</a>, write a blog post(<a href="https://github.com/dashcommunity/guides/blob/master/create_blog_post.md">https://github.com/dashcommunity/guides/blob/master/create_blog_post.md</a>), create a proposal(<a href="https://github.com/dashcommunity/guides/blob/master/create_proposal_from_template.md">https://github.com/dashcommunity/guides/blob/master/create_proposal_from_template.md</a>), or commit something else to the repository that's useful to the community</li>
+<li>Contribute some dash-related code, <a href="https://github.com/dashcommunity/guides">write a guide</a>, <a href="https://github.com/dashcommunity/guides/blob/master/create_blog_post.md">write a blog post</a>, <a href="https://github.com/dashcommunity/guides/blob/master/create_proposal_from_template.md">create a proposal</a>, or commit something else to the repository that's useful to the community</li>
 <li>Help lobby the masternode operators to fund the project</li>
 </ol>
 
