Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -69,17 +69,6 @@
 <a id="contribute-to-dash-community" class="anchor" href="#contribute-to-dash-community" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Contribute to Dash Community</h3>
 
 <h5>
-<a id="how" class="anchor" href="#how" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>How</h5>
-
-<ol>
-<li>Fill out the form below to receive an invitation to the organization </li>
-<li>Explore the repository and the <a href="https://github.com/dashcommunity/proposal-dash-community/projects/1?fullscreen=true">project management board</a>
-</li>
-<li>Contribute some dash-related code, <a href="https://github.com/dashcommunity/guides">write a guide</a>, <a href="https://github.com/dashcommunity/guides/blob/master/create_blog_post.md">write a blog post</a>, <a href="https://github.com/dashcommunity/guides/blob/master/create_proposal_from_template.md">create a proposal</a>, or commit something else to the repository that's useful to the community</li>
-<li>Help lobby the masternode operators to fund the project</li>
-</ol>
-
-<h5>
 <a id="why" class="anchor" href="#why" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Why</h5>
 
 <p>Members of this organization who join and contribute content to Dash Community will be compensated according to the table below.  Payments are contingent on approval of the <a href="https://dashcommunity.github.io/proposal-dash-community/">proposal to the Dash masternode operators</a></p>
@@ -123,6 +112,21 @@
 </tr>
 </tbody>
 </table>
+
+<h5>
+<a id="how" class="anchor" href="#how" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>How</h5>
+
+<ol>
+<li>Fill out the form below to receive an invitation to the organization </li>
+<li>Explore the repository and the <a href="https://github.com/dashcommunity/proposal-dash-community/projects/1?fullscreen=true">project management board</a>
+</li>
+<li>Contribute some dash-related code:</li>
+<li><a href="https://github.com/dashcommunity/guides">write a guide</a></li>
+<li><a href="https://github.com/dashcommunity/guides/blob/master/create_blog_post.md">write a blog post</a></li>
+<li><a href="https://github.com/dashcommunity/guides/blob/master/create_proposal_from_template.md">create a proposal</a></li>
+<li>or commit something else to the repository that's useful to the community</li>
+<li>Help lobby the masternode operators to fund the project</li>
+</ol>
 
 <h3>
 <a id="join-dash-community" class="anchor" href="#join-dash-community" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Join Dash Community</h3>
