Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -120,11 +120,15 @@
 <li>Fill out the form below to receive an invitation to the organization </li>
 <li>Explore the repository and the <a href="https://github.com/dashcommunity/proposal-dash-community/projects/1?fullscreen=true">project management board</a>
 </li>
-<li>Contribute some dash-related code:</li>
+<li>Contribute some dash-related code:
+
+<ul>
 <li><a href="https://github.com/dashcommunity/guides">write a guide</a></li>
 <li><a href="https://github.com/dashcommunity/guides/blob/master/create_blog_post.md">write a blog post</a></li>
 <li><a href="https://github.com/dashcommunity/guides/blob/master/create_proposal_from_template.md">create a proposal</a></li>
 <li>or commit something else to the repository that's useful to the community</li>
+</ul>
+</li>
 <li>Help lobby the masternode operators to fund the project</li>
 </ol>
 
