Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">Dash Community</h1>
-      <h2 class="project-tagline">An open platform that incentivizes collaborative projects and content</h2>
+      <h2 class="project-tagline">Open collaboration for dash-related projects</h2>
     </section>
 
     <section class="main-content">
@@ -43,7 +43,7 @@
 <a id="blog" class="anchor" href="#blog" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Blog</h5>
 
 <ul>
-<li><a href="https://github.com/dashcommunity/blog/">Landing Page</a></li>
+<li><a href="https://dashcommunity.github.io/blog/">Landing Page</a></li>
 <li><a href="https://github.com/dashcommunity/blog">Repository</a></li>
 </ul>
 
