--- a/index.html
+++ b/index.html
@@ -16,36 +16,34 @@
     </section>
 
     <section class="main-content">
-      <p><strong>Dash Community</strong> is a <a href="https://github.com/blog/674-introducing-organizations">github organization</a> separate from, and complementary to, the main <a href="https://github.com/dashpay"><code>dashpay</code></a> organization.  The <a href="https://github.com/dashcommunity"><code>dashcommunity</code></a> organization hosts repositories for various purposes - something for everyone.  </p>
+      <p><strong>Dash Community</strong> is a <a href="https://github.com/blog/674-introducing-organizations">github organization</a> separate from, and complementary to, the main <a href="https://github.com/dashpay"><code>dashpay</code></a> organization.  The <a href="https://github.com/dashcommunity"><code>dashcommunity</code></a> organization hosts repositories for various purposes - being something for everyone.  </p>
 
-<p>This platform aims to increase community contribution and continue the general decentralization of Dash.  It achieves this by lowering the barrier to entry and raising the <a href="https://github.com/dashcommunity/proposal-dash-community/blob/master/proposal.md#table-4---compensation-for-community-participation">financial incentive</a> for software developers, writers, marketers, and anyone else to use and contribute to Dash.</p>
+<p>This platform aims to increase community contribution and continue the general decentralization of Dash.  It achieves this by lowering the barrier to entry and raising the <a href="https://github.com/dashcommunity/proposal-dash-community/blob/master/proposal.md#table-4---compensation-for-community-participation">financial incentive</a> for software developers, writers, marketers, and anyone else to use and contribute to progress Dash.</p>
 
-<h3>
-<a id="explore-dash-community" class="anchor" href="#explore-dash-community" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Explore Dash Community</h3>
+<link rel="stylesheet" type="text/css" href="stylesheets/test.css">
+<h1 style="color:#179A58"> Explore Dash Community </h1>
+<div class="Rtable Rtable--3cols">
 
-<h5>
-<a id="proposals" class="anchor" href="#proposals" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Proposals</h5>
-
-<ul>
+  <div style="order:1;" class="Rtable-cell"><h3>Proposals</h3></div>
+  <div style="order:2;" class="Rtable-cell"><ul>
 <li><a href="https://dashcommunity.github.io/proposals/">Landing Page</a></li>
-<li><a href="https://github.com/dashcommunity/proposals/">Repository</a></li>
-</ul>
 
-<h5>
-<a id="guides" class="anchor" href="#guides" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Guides</h5>
+</ul></div>
+  <div style="order:3;" class="Rtable-cell"><ul><li><a href="https://github.com/dashcommunity/proposals/">Repository</a></li></ul></div>
+  
 
-<ul>
-<li><a href="https://dashcommunity.github.io/guides/">Landing Page</a></li>
-<li><a href="https://github.com/dashcommunity/guides">Repository</a></li>
-</ul>
+  <div style="order:1;" class="Rtable-cell"><h3>Guides</h3></div>
+  <div style="order:2;" class="Rtable-cell"><ul>
+<li><a href="https://dashcommunity.github.io/guides/">Landing Page</a></li></ul>
+</div>
+  <div style="order:3;" class="Rtable-cell"><ul><li><a href="https://github.com/dashcommunity/guides">Repository</a></li>
+</ul></div>
+  
 
-<h5>
-<a id="blog" class="anchor" href="#blog" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Blog</h5>
-
-<ul>
-<li><a href="https://dashcommunity.github.io/blog/">Landing Page</a></li>
-<li><a href="https://github.com/dashcommunity/blog">Repository</a></li>
-</ul>
+  <div style="order:1;" class="Rtable-cell"><h3>Blogs</h3></div>
+  <div style="order:2;" class="Rtable-cell"><ul>
+<li><a href="https://dashcommunity.github.io/blog/">Landing Page</a></li></ul></div>
+  <div style="order:3;" class="Rtable-cell"><ul><li><a href="https://github.com/dashcommunity/blog">Repository</a></li></ul></div></div>
 
 <h3>
 <a id="contribute-to-dash-community" class="anchor" href="#contribute-to-dash-community" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Contribute to Dash Community</h3>
@@ -102,16 +100,16 @@
 <li>Fill out the form below to receive an invitation to the organization </li>
 <li>Explore the repository and the <a href="https://github.com/dashcommunity/proposal-dash-community/projects/1?fullscreen=true">project management board</a>
 </li>
-<li>Contribute some dash-related code:
+<li>Contribute some dash-related information or code:
 
 <ul>
-<li><a href="https://github.com/dashcommunity/guides">write a guide</a></li>
-<li><a href="https://github.com/dashcommunity/guides/blob/master/create_blog_post.md">write a blog post</a></li>
-<li><a href="https://github.com/dashcommunity/guides/blob/master/create_proposal_from_template.md">create a proposal</a></li>
+<li><a href="https://github.com/dashcommunity/guides">write a guide to posibly be hosted separately</a></li>
+<li><a href="https://github.com/dashcommunity/guides/blob/master/create_blog_post.md">write a blog post for simular reasons</a></li>
+<li><a href="https://github.com/dashcommunity/guides/blob/master/create_proposal_from_template.md">create a proposal to get funding for a paid project</a></li>
 <li>or commit something else to the repository that's useful to the community</li>
 </ul>
 </li>
-<li>Help lobby the masternode operators to fund the project</li>
+<li>Help lobby the masternode operators to fund this project</li>
 </ol>
 
 <h3>
@@ -127,3 +125,4 @@
   
   </body>
 </html>
+
